<resources>
    <string name="app_name">Lawyaar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">shambhu k</string>
    <string name="nav_header_subtitle">shambhu@lawyaar.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_lawyaar">Lawyaars</string>
    <string name="menu_profile">Profile</string>
    <string name="header_appointment">My Appointment</string>
    <string name="button_reschedule">Reschedule</string>
    <string name="button_cancel">Cancel</string>

    <string name="rs_symbol">\u20B9</string>
    <string name="menu_gallery">Appoitment</string>
    <string name="menu_slideshow">Wallet</string>
    <string name="menu_profileshow">My Profile</string>
    <string name="menu_profileshowrate">Rate Lawyaar</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_faq">FAQs</string>
    <string name="menu_share">Share with Friends\n and Family</string>
    <string name="menu_setting">Settings</string>
    <string name="veiw_details"><u>Veiw details</u></string>
    <string name="appointment_notifications_channel_id">appointments_channel_id</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>


    <string name="appointment_upcoming">Upcoming</string>
    <string name="appointment_completed">Completed</string>
    <string name="appointment_cancel">Cancelled</string>
    <string name="accessibility_calendar_icon">Calendar</string>
    <string name="accessibility_header_back_icon">Screen Back Arrow</string>

    <string name="appointment_called">Cancelled</string>
    <string name="setting_item_accessibility">Item Icon</string>

</resources>