<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/calendar"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/wallet"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_profileshow"
            android:icon="@drawable/user"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_profileshow" />

        <item
            android:id="@+id/rate_lawyaar"
            android:icon="@drawable/icon_fav"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_profileshowrate" />

        <item
            android:id="@+id/rate_contact"
            android:icon="@drawable/messenger"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/report"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_faq" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/gavel"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:fontFamily="@font/proximanovaregular"
            android:title="@string/menu_setting" />
    </group>
</menu>