<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lawyaar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lawyaar.ui.slideshow.BookedAppointmentFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/nav_slideshow"
        android:name="com.lawyaar.ui.wallet.WalletActivity"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_wallet" />

    <activity
        android:id="@+id/nav_profileshow"
        android:name="com.lawyaar.ui.profile.UpdateProfileActivity"
        android:label="@string/menu_profileshow"
        tools:layout="@layout/fragment_wallet" />




</navigation>