<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgorund_col"
    tools:context=".ui.home.HomeFragment">

    <include
        android:id="@+id/headers"
        layout="@layout/fragments_header"
        shimmer:layout_constraintStart_toStartOf="parent"
        shimmer:layout_constraintBottom_toTopOf="@id/upcoming_section"
        shimmer:layout_constraintTop_toTopOf="parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        shimmer:duration="800"
        shimmer:layout_constraintBottom_toBottomOf="parent"
        shimmer:layout_constraintEnd_toEndOf="parent"
        shimmer:layout_constraintStart_toStartOf="parent"
        shimmer:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/lawyaar_single_shimmer_list" />

            <include layout="@layout/lawyaar_single_shimmer_list" />

            <include layout="@layout/lawyaar_single_shimmer_list" />

            <include layout="@layout/lawyaar_single_shimmer_list" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/upcoming_section"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/appointment_upcoming"
        android:textSize="18sp"
        android:textStyle="bold"
        shimmer:layout_constraintEnd_toStartOf="@id/completed_section"
        shimmer:layout_constraintStart_toStartOf="parent"
        shimmer:layout_constraintTop_toBottomOf="@id/headers" />

    <View
        android:id="@+id/upcoming_view"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/grey"
        android:gravity="center"
        shimmer:layout_constraintEnd_toStartOf="@id/upcoming_section"
        shimmer:layout_constraintStart_toEndOf="@id/completed_section"
        shimmer:layout_constraintTop_toBottomOf="@id/headers" />

    <TextView
        android:id="@+id/completed_section"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/appointment_completed"
        android:textSize="18sp"
        android:textStyle="bold"
        shimmer:layout_constraintEnd_toStartOf="@id/completed_view"
        shimmer:layout_constraintStart_toEndOf="@id/upcoming_view"
        shimmer:layout_constraintTop_toBottomOf="@id/headers" />

    <View
        android:id="@+id/completed_view"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/hint_text_color"
        android:gravity="center"
        shimmer:layout_constraintEnd_toStartOf="@id/cancel_section"
        shimmer:layout_constraintStart_toEndOf="@id/completed_section"
        shimmer:layout_constraintTop_toBottomOf="@id/headers" />

    <TextView
        android:id="@+id/cancel_section"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/appointment_cancel"
        android:textSize="18sp"
        android:textStyle="bold"
        shimmer:layout_constraintEnd_toEndOf="parent"
        shimmer:layout_constraintStart_toEndOf="@id/completed_view"
        shimmer:layout_constraintTop_toBottomOf="@id/headers" />


    <!--</androidx.cardview.widget.CardView>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_veiw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        shimmer:layout_constraintBottom_toBottomOf="parent"
        shimmer:layout_constraintEnd_toEndOf="parent"
        shimmer:layout_constraintStart_toStartOf="parent"
        shimmer:layout_constraintTop_toBottomOf="@id/upcoming_section"
        tools:listitem="@layout/single_row_booked_session_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>